@@ -1,3 +1,5 @@
+- Refactor: Replace usages of deprecated RegistrationStateTypeEnum [#qubIT-Fenix-2585]
+
 11.17.5 (29-07-2024)
 - Bug Fix: Consider all registration states when executing the anull debit entries generation rule [#qubIT-Fenix-5538]
 
